--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.8+80
+version: 3.19.5+1
 
 environment:
-  sdk: ">=2.18.5 <4.0.1"
+  sdk: '>=3.3.3 <4.0.0'
 
 
   # sdk: ">=2.15.0 <3.0.0"
@@ -64,7 +64,7 @@ dependencies:
   # motion_tab_bar: ^0.0.1
 
 dev_dependencies:
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
 
