--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,14 +1,16 @@
+
+plugins {
+    id "com.android.application"
+    id "kotlin-android"
+    id "dev.flutter.flutter-gradle-plugin"
+}
+
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
     localPropertiesFile.withReader('UTF-8') { reader ->
         localProperties.load(reader)
     }
-}
-
-def flutterRoot = localProperties.getProperty('flutter.sdk')
-if (flutterRoot == null) {
-    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
@@ -21,13 +23,9 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-parcelize'
-apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-
 android {
-    compileSdkVersion 33
+    namespace "com.aoeiuv020.flutter.demo"
+    compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -41,44 +39,17 @@ android {
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
-        main.jniLibs.srcDirs = ['libs', 'src/main/jniLibs']
     }
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.sail_tunnel.sail"
+        applicationId "com.aoeiuv020.flutter.demo"
         // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion 26
-        //noinspection ExpiredTargetSdkVersion
-        targetSdkVersion 28
+        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
+        minSdkVersion flutter.minSdkVersion
+        targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        // ndk {
-        //     abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', "x86_64"
-        // }
-        //  dexOptions {
-        //     incremental true
-        //     javaMaxHeapSize "4g"
-        //     preDexLibraries true
-        //     dexInProcess = true
-        // }
-        ndk {
-                if (!project.hasProperty('target-platform')) {
-                    abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86_64'
-                } else {
-                    def platforms = project.property('target-platform').split(',')
-                    def platformMap = [
-                            'android-arm'  : 'armeabi-v7a',
-                            'android-arm64': 'arm64-v8a',
-                            'android-x86'  : 'x86',
-                            'android-x64'  : 'x86_64',
-                    ]
-                    abiFilters = platforms.stream().map({ e ->
-                        platformMap.containsKey(e) ? platformMap[e] : e
-                    }).toArray()
-                }
-            }
     }
 
     buildTypes {
@@ -87,7 +58,6 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
-        
     }
 }
 
@@ -95,13 +65,5 @@ flutter {
     source '../..'
 }
 
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.jakewharton.timber:timber:5.0.1"
-    implementation 'androidx.work:work-runtime-ktx:2.7.1'
-    implementation 'androidx.preference:preference-ktx:1.2.0'
-    implementation "dnsjava:dnsjava:3.5.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
-}
+dependencies {}
+apply from: rootProject.file('gradle/signing.gradle')
